--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "dependencies": {
-    "bcrypt": "^5.1.0",
-    "dotenv": "^16.0.3",
-    "joi": "^17.7.0",
-    "mongodb": "^4.13.0",
-    "nodemon": "^2.0.20"
-  },
   "name": "projeto15-boot_store-back",
   "type": "module",
   "description": "",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./src/app.js",
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "joi": "^17.7.0",
+    "mongodb": "^4.13.0",
+    "nodemon": "^2.0.20"
+  },
   "scripts": {
     "start": "nodemon ./src/app.js"
   },
